# waysnip

./: Cargo.toml  README.md
src/: canvas.rs  clipboard.rs  main.rs  screenshot.rs  selection.rs  window.rs
