[package]
name = "waysnip"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.4"
gdk-pixbuf = "0.20"
glib = "0.20"
chrono = "0.4"
libwayshot = { version = "0.6", default-features = false }

[profile.release]
opt-level = 3
lto = true
